activities: don't remember virtual desktops when intentionally switching to a different one

BUG: 427579